// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdsAccordion Component renders correctly 1`] = `
"<ids-accordion>
    <ids-accordion-panel id=\\"p1\\">
      <ids-accordion-header id=\\"h1\\" slot=\\"header\\" aria-expanded=\\"false\\"></ids-accordion-header>
    </ids-accordion-panel>
    <ids-accordion-panel id=\\"p2\\">
      <ids-accordion-header id=\\"h2\\" slot=\\"header\\" aria-expanded=\\"false\\"></ids-accordion-header>
    </ids-accordion-panel>
    <ids-accordion-panel id=\\"p3\\">
      <ids-accordion-header id=\\"h3\\" slot=\\"header\\" aria-expanded=\\"false\\"></ids-accordion-header>
    </ids-accordion-panel>
  </ids-accordion>"
`;

exports[`IdsAccordion Component renders correctly 2`] = `
"<ids-accordion>
    <ids-accordion-panel id=\\"p1\\" expanded=\\"true\\">
      <ids-accordion-header id=\\"h1\\" slot=\\"header\\" aria-expanded=\\"true\\"></ids-accordion-header>
    </ids-accordion-panel>
    <ids-accordion-panel id=\\"p2\\">
      <ids-accordion-header id=\\"h2\\" slot=\\"header\\" aria-expanded=\\"false\\"></ids-accordion-header>
    </ids-accordion-panel>
    <ids-accordion-panel id=\\"p3\\">
      <ids-accordion-header id=\\"h3\\" slot=\\"header\\" aria-expanded=\\"false\\"></ids-accordion-header>
    </ids-accordion-panel>
  </ids-accordion>"
`;

exports[`IdsAccordion Component renders correctly 3`] = `
"<ids-accordion>
    <ids-accordion-panel id=\\"p1\\">
      <ids-accordion-header id=\\"h1\\" slot=\\"header\\" aria-expanded=\\"false\\"></ids-accordion-header>
    </ids-accordion-panel>
    <ids-accordion-panel id=\\"p2\\">
      <ids-accordion-header id=\\"h2\\" slot=\\"header\\" aria-expanded=\\"false\\"></ids-accordion-header>
    </ids-accordion-panel>
    <ids-accordion-panel id=\\"p3\\">
      <ids-accordion-header id=\\"h3\\" slot=\\"header\\" aria-expanded=\\"false\\"></ids-accordion-header>
    </ids-accordion-panel>
  </ids-accordion>"
`;
